#19347 closed bug (fixed)
errno.h does not define ESOCKTNOSUPPORT
Reported by: | bhaible | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta6 |
Component: | System/POSIX | Version: | R1/beta5 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
POSIX:2024 specifies that <error.h> should define the constant ESOCKTNOSUPPORT. More details at Austin Group Defect 1067.
Haiku (hrev57823 is from 2024-07-15) does not define it.
How to reproduce:
- Save this file as foo.c
#include <errno.h> int e = ESOCKTNOSUPPORT; int main () {}
- Compile it:
gcc -Wall foo.c
Expected: no error.
Actual:
foo.c:2:9: error: 'ESOCKTNOSUPPORT' undeclared here (not in a function); did you mean 'EAFNOSUPPORT'?
Attachments (1)
Change History (4)
by , 5 weeks ago
comment:1 by , 5 weeks ago
Milestone: | Unscheduled → R1/beta6 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev58508.
comment:2 by , 5 weeks ago
I believe the essence of the ticket is not just to add a new error code, but to actually signal / handle it in use-cases specified by socket interface.
This issue is inspired by the following post from forum: https://discuss.haiku-os.org/t/make-ansi-common-lisp-available-on-haiku-again/15780/135.
For specification see:
https://pubs.opengroup.org/onlinepubs/9799919799/functions/V2_chap02.html
https://pubs.opengroup.org/onlinepubs/9799919799/functions/socket.html
comment:3 by , 5 weeks ago
There are TODOs elsewhere about returning the proper EPROTOTYPE and other errors in the network stack which we don't do yet already.
test case foo.c