src/system/libroot/posix/string/strerror.c
@@ -536,6 +536,8 @@ error_description(int error)
 			return "State not recoverable";
 		case EOWNERDEAD:
 			return "Previous owner died";
+		case ESOCKTNOSUPPORT:
+			return "Socket type not supported";
 
 		default:
 			return NULL;
